--- a/index.html
+++ b/index.html
@@ -1,8 +1,72 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE HTML>
 <html>
+    <head>
+		<title>PanagiotisPimenidis</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
+</html> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>Add a brief description of yourself here.</p>
+      </section>
+      <section id="projects">
+        <h2>My Projects</h2>
+        <ul>
+          <li>
+            <h3>Project 1</h3>
+            <p>Add a brief description of project 1 here.</p>
+          </li>
+          <li>
+            <h3>Project 2</h3>
+            <p>Add a brief description of project 2 here.</p>
+          </li>
+          <li>
+            <h3>Project 3</h3>
+            <p>Add a brief description of project 3 here.</p>
+          </li>
+        </ul>
+      </section>
+      <section id="contact">
+        <h2>Get in Touch</h2>
+        <form action="submit-form.php" method="post">
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name"><br>
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email"><br>
+          <label for="message">Message:</label>
+          <textarea id="message" name="message"></textarea><br>
+          <input type="submit" value="Submit">
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>Copyright © 2023 My Name</p>
+    </footer>
+  </body>
 </html>
